# phytorch

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  examples.rst  index.rst
docs/source/_ext/: any_tilde.py  directives.py  ipython_directive.py  regex_lexer.py
docs/source/_static/: style.css
docs/source/api/: constants.rst  cosmology.rst  index.rst  interpolate.rst  quantities.rst  roots.rst  special.rst  units.rst
docs/source/examples/: cosmology.ipynb  units.rst
docs/source/guide/: cosmology.rst  index.rst  units.rst
papers/joss/: paper.bib  paper.md
phytorch/: __init__.py  _version.pyi  math.py  math.pyi  meta.py  ragged.py
phytorch-extensions/: CMakeLists.txt  setup.py
phytorch-extensions/common/: Loops.h  complex.h  device.h  implement.cuh  implement.h  implement_cpu.h  implement_cuda.cuh  moremath.h  preprocessor.h  templating.h  utils.h
phytorch-extensions/ellipr/: ellipr.cpp  ellipr.cuh  ellipr_impl.cu  elliprc.cu  elliprd.cu  elliprf.cu  elliprg.cu  elliprj.cu
phytorch-extensions/elliptic/: ellip.cu  ellip.h  ellip_cpu.cpp  ellip_cuda.cu  elliprc.cu  elliprc.h  elliprc_cpu.cpp  elliprc_cuda.cu  elliprd.cu  elliprd.h  elliprd_cpu.cpp  elliprd_cuda.cu  elliprf.cu  elliprf.h  elliprf_cpu.cpp  elliprf_cuda.cu  elliprg.cu  elliprg.h  elliprg_cpu.cpp  elliprg_cuda.cu  elliprj.cu  elliprj.h  elliprj_cpu.cpp  elliprj_cuda.cu  elliptic.cpp  elliptic.cuh  elliptic.h  elliptic_impl.cu
phytorch-extensions/roots/: roots.cpp  roots.h  roots_cpu.cpp  roots_cuda.cu  roots_impl.cu
phytorch-extensions/special/: _hyper.cu  digamma.cu  digamma.h  digamma_cpu.cpp  digamma_cuda.cu  gamma.cu  gamma.h  gamma_cpu.cpp  gamma_cuda.cu  gammahead.cuh  gammahead.h  gammainc.cu  gammainc.h  gammainc_cpu.cpp  gammainc_cuda.cu  gammaincinv.cu  gammaincinv.h  gammaincinv_cpu.cpp  gammaincinv_cuda.cu  hyper.cu  hyper.cuh  hyper.h  hyper_cpu.cpp  hyper_cuda.cu  hyper_impl.cu  hyperhead.h  loggamma.cu  loggamma.h  loggamma_cpu.cpp  loggamma_cuda.cu  meijerg.cu  meijerg.cuh  meijerg.h  meijerg_cpu.cpp  meijerg_cuda.cu  meijerg_impl.cu  polygamma.cu  special.cpp  special.cuh  special_impl.cu  (+1 more)
phytorch/_q1/: __init__.py  quantity.py
phytorch/_q1/delegation/: delegator.py  quantity_delegators.py
phytorch/_q1/torchquantity/: __init__.py  functypes.py
phytorch/constants/: Constant.py  __init__.py  _codata.pyi  astro.py  astro.pyi  codata.py  codata2014.py  codata2018.py  constant.py
phytorch/cosmology/: __init__.py  components.py  core.py  module.py  special.py  utils.py
phytorch/cosmology/drivers/: __init__.py  _analytic.py  _analytic_base.py  abstract.py  abstract.pyi  analytic.py  analytic_diff.py  odeint.py  odeint.pyi
phytorch/cosmology/special/: __init__.py  concrete.py  concrete.pyi  decdm.py  flat.py  flat.pyi
phytorch/cosmology/special/concrete/: Lambda.py  Lambda.pyi  __init__.py  w.py
phytorch/distributions/: __init__.py
phytorch/extensions/: __init__.py  ellipr.pyi  elliptic.pyi  roots.pyi  special.pyi
phytorch/interpolate/: Linear1dInterpolator.py  LinearNDGridInterpolator.py  __init__.py  abc.py  splines.py
phytorch/quantities/: __init__.py  delegator.py  dimspec.py  quantity.py  signatures.py  tensor_quantity.py
phytorch/quantities/delegation/: delegating.py  delegator.py  quantity_delegators.py
phytorch/quantities/torchquantity/: __init__.py  functypes.py
phytorch/ragged/: __init__.py  ragged_old.py
phytorch/roots/: __init__.py  __init__.pyi
phytorch/special/: __init__.py  ellip.py  ellip.pyi  ellipr.py  ellipr.pyi  elliptic.py  elliptic_reduction.py  gamma.py  gamma.pyi  gammainc.py  gammainc.pyi  hyper.py  hyper.pyi  zeta.py
phytorch/special/elliptic_reduction/: core.py  functional.py  mp.py  symbolic.py
phytorch/units/: Unit.py  __init__.py  _prefixes.py  _utils.py  angular.py  astro.py  astro.pyi  exceptions.py  prefixes.py  prefixes.pyi  si.py  test.py  unit.py
phytorch/units/_si/: _base_unit_map.py  _coherent_unit_map.py  additional.py  additional.pyi  base.py  base.pyi  coherent.py  coherent.pyi  prefixed.py  prefixed.pyi
phytorch/units/cgs/: __init__.py
phytorch/utils/: __init__.py  _typing.py  broadcast.py  complex.py  function_context.py  pytree.py  scoping.py  symmetry.py
phytorch/utils/interop/: __init__.py  _astropy.py
tests/: common.py  test.py  test_constants.py
tests/common/: __init__.py  cases.py  closeness.py  dtypes.py  strategies.py  strategies_units.py
tests/common/strategies/: numbers.py  tensors.py  units.py
tests/constants/: test_constants.py
tests/cosmology/: test_cosmology_apsuite.py
tests/interpolate/: common.py  test_1d.py  test_nd.py
tests/quantities/: quantity_utils.py
tests/quantities/tensor_quantity/: test_api.py  test_tensor_quantity_basic.py
tests/roots/: test_roots.py
tests/special/: test_ellip.py  test_ellipr.py  test_elliptic_grads.py  test_elliptic_reduction.py  test_gamma.py  test_gammainc.py  test_hyper.py  test_zeta.py
tests/units/: test_unit.py
