[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phytorch"
description = "Utilities for computational physics with PyTorch"
authors = [{name = "Kosio Karchev", email = "kosiokarchev@gmail.com"}]

readme = "README.md"
license = {text = "GPLv3"}

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Typing :: Typed"
]

requires-python = ">=3.9"

dependencies = [
    "frozendict",
    "more-itertools",
    "typing-extensions",
    "python-forge",
    "sympy",
    "mpmath",
    "torch>=1.13",
    "optree",
    "phytorchx"
]

dynamic = ["version"]

[project.urls]
"GitHub" = "https://github.com/kosiokarchev/phytorch"
"Read the Docs" = "https://phytorch.readthedocs.org/"

[project.optional-dependencies]
docs = [
    "myst_parser", "sphinx-autoapi", "sphinx_copybutton",
    "ipykernel", "nbsphinx", "sphinx_gallery",
    "astropy", "matplotlib",
]
testing = ["pytest", "hypothesis[numpy]", "numpy", "scipy"]
interop = ["astropy"]
odeint = ["torchdiffeq"]

[tool.setuptools.packages.find]
include = ["phytorch*"]
exclude = ["phytorch-extensions*"]

[tool.setuptools.package-data]
phytorch = ["**/*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "phytorch._version.__version__"}

[tool.setuptools_scm]
write_to = "phytorch/_version.py"
version_scheme = "no-guess-dev"

[tool.pytest]
testpaths = "tests"
