[metadata]
name = phytorch
version = attr: phytorch.__version__
description = Utilities for computational physics with PyTorch
author = Kosio Karchev
author_email = kosiokarchev@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/kosiokarchev/phytorch

[options]
packages = find:
python_requires = >=3.9
install_requires =
    frozendict
    more_itertools
    typing_extensions
    sympy
    mpmath
    torch>=1.12
    torch_scatter

[options.packages.find]
include = phytorch

[options.extras_require]
testing = pytest; hypothesis[numpy]; numpy; scipy; mpmath
odeint = torchdiffeq

[tool:pytest]
testpaths = tests
