[metadata]
name = phytorch
version = attr: phytorch.__version__
description = Utilities for computational physics with PyTorch
author = Kosio Karchev
author_email = kosiokarchev@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/kosiokarchev/phytorch

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    frozendict
    more_itertools
    typing_extensions
    python-forge
    sympy
    mpmath
    torch>=1.12

[options.packages.find]
include = phytorch*
exclude = phytorch-extensions*

[options.package_data]
phytorch =
    extensions/*.pyi

[options.extras_require]
testing = pytest; hypothesis[numpy]; numpy; scipy
interop = astropy
odeint = torchdiffeq

docs =
    myst_parser
    sphinx-autoapi
    sphinx_copybutton
    ipykernel
    nbsphinx
    sphinx_gallery
    matplotlib

[tool:pytest]
testpaths = tests
